--- a/package.json
+++ b/package.json
@@ -9,26 +9,29 @@
     "node": ">=22.0.0"
   },
   "dependencies": {
-    "@tomphttp/bare-server-node": "^2.0.3",
-    "wisp-server-node": "^1.1.3",
     "@mercuryworkshop/bare-mux": "^2.1.7",
     "@mercuryworkshop/epoxy-transport": "^2.1.27",
     "@mercuryworkshop/libcurl-transport": "^1.4.0",
-    "@mercuryworkshop/wisp-js": "^0.3.3",
     "@mercuryworkshop/scramjet": "https://github.com/MercuryWorkshop/scramjet/archive/refs/tags/latest.tar.gz",
-    "@titaniumnetwork-dev/ultraviolet": "^3.2.10",
-    "express": "^4.21.0",
+    "@mercuryworkshop/wisp-js": "^0.3.3",
     "@supabase/supabase-js": "^2.45.4",
-    "express-session": "^1.18.0",
-    "dotenv": "^16.4.5",
-    "express-fileupload": "^1.5.1",
-    "proper-lockfile": "^4.1.2",
-    "helmet": "^8.0.0",
-    "express-rate-limit": "^7.4.0",
-    "cors": "^2.8.5",
+    "@titaniumnetwork-dev/ultraviolet": "^3.2.10",
+    "@tomphttp/bare-server-node": "^2.0.3",
+    "bcrypt": "^6.0.0",
+    "better-sqlite3": "^12.4.1",
     "cookie-parser": "^1.4.6",
+    "cors": "^2.8.5",
+    "dotenv": "^16.4.5",
+    "express": "^4.21.0",
+    "express-fileupload": "^1.5.1",
+    "express-rate-limit": "^7.4.0",
+    "express-session": "^1.18.0",
+    "helmet": "^8.0.0",
     "http-proxy-middleware": "^3.0.5",
-    "node-fetch": "^3.3.2"
+    "node-fetch": "^3.3.2",
+    "nodemailer": "^7.0.10",
+    "proper-lockfile": "^4.1.2",
+    "wisp-server-node": "^1.1.3"
   },
   "devDependencies": {
     "node": "^22.19.0"
